# cmake-findpthreads

./: CMakeLists.txt  README.md
